# VoiceAI_MobileVersion

./: .gitignore  CAPACITOR_MIGRATION.md  MIGRATION_PLAN.md  PRIVACY_POLICY.md  README.md  STRIPE_SETUP.md  SUPABASE_SETUP_PLAN.md  TERMS_OF_SERVICE.md  VoiceNoteAI.sln  build-tauri.bat  create-icons.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: build-android.yml
src-tauri/: AndroidManifest.xml  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/__tests__/: appStore.test.ts  authStore.test.ts  enrichmentService.test.ts  setup.ts  supabase.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AuthScreen.tsx  HistoryDetail.tsx  HistoryList.tsx  LegalModal.tsx  ResultsDisplay.tsx  SettingsPanel.tsx  ShareModal.tsx  UpgradeModal.tsx  UsageDisplay.tsx  VoiceRecorder.tsx
src/hooks/: useDeepLink.ts  useTauriIntegration.ts
src/lib/: audioRecorder.ts  enrichmentService.ts  supabase.ts  transcriptionService.ts
src/store/: appStore.ts  authStore.ts
static/: cancel.html  index.html  success.html
supabase/: SETUP.md  schema.sql  subscriptions_schema.sql
supabase/functions/create-checkout/: index.ts
supabase/functions/enrich/: index.ts
supabase/functions/payment-result/: index.ts
supabase/functions/stripe-webhook/: index.ts
supabase/functions/transcribe/: config.toml  index.ts
