[package]
name = "voice-note-ai"
version = "1.0.0"
description = "Voice Note AI Desktop Application"
authors = ["Voice Note AI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["clipboard-all", "dialog-all", "fs-all", "global-shortcut-all", "notification-all", "path-all", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
